Section 7 Services & Networking/multipath-ingress-networking-2-lab-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: "2024-07-15T22:06:55Z"
  generation: 1
  name: multipath
  namespace: app-space
  resourceVersion: "4826"
  uid: 7b887270-a136-4b02-9019-08295634045c
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: wear-service
            port:
              number: 8080
        path: /wear
        pathType: Exact
      - backend:
          service:
            name: video-service
            port:
              number: 8080
        path: /watch
        pathType: Exact
status:
  loadBalancer: {}
